close button no longer overlaps the text
Changelog: fixed

reformat the code as it was

--- a/webapp/channels/src/sass/components/_modal.scss
+++ b/webapp/channels/src/sass/components/_modal.scss
@@ -258,6 +258,7 @@
         padding: 16px 64px 16px 32px;
         border: none;
         background: transparent;
+        width: 98%;
 
         &.divider {
             border-bottom: 1px solid rgba(var(--center-channel-color-rgb), 0.12);
